--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -144,7 +144,7 @@
 
 .faq_icon{
     background: transparent;
-    color: var(--color-gray-100);
+    color: var(--color-white);
     font-size: 1.5rem;
 }
 
